@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/c_misc.c: Fix incorrect use of FMT64 in commant_statistics().
+Alex Schultz 2006-10-02
+
 server/monster.c: Revert message formatting of NPC responses back to the
    two-line format. Fix a possible buffer overflow when players talk to
    certain NPCs.
